--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,48 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Root node modules
+/node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Server-specific node modules
+/server/node_modules/
 
-# testing
-/coverage
+# Ignore all .env files
+.env
+/server/.env
 
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Build outputs
+/build/
+dist/
+
+# Coverage / test
+coverage/
+.vitest/
+*.lcov
+
+# OS + editor junk
+.DS_Store
+Thumbs.db
+*.log
+
+# VSCode settings
+.vscode/
+
+# Test snapshots
+__snapshots__/
+
+# Ignore React testing files
+*.test.js
+*.test.jsx
+
+# Ignore cache folders
+.cache/
+.eslintcache
+.next/
+out/
+
+# Optional: ignore lockfiles (if you don’t want deterministic installs)
+# package-lock.json
+# yarn.lock
